test/programs/invalid/_custom/abstract_static.java
public class AbstractStatic {
  public abstract static void a();
}
